--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import "~vuetify/dist/vuetify.min.css";
 
 // Variables
 @import 'variables';
